login page bones

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,9 @@ nav a:hover{background-color: #009db6; border: 2px; border-color: #c1deee; borde
 
 /*Style rules for main content*/
 main{clear: left; background-color: #fff; padding: 2%; font-size: 1.25em;}
+
+/*Style rules for login*/
+input[type=text], input[type=password]{width: 100%; padding: 12px 20px; margin: 8px 0; display: inline-block; border: 1px solid #ccc; box-sizing: border-box;}
+.container{width: 200px; height: 200px; margin: 3% 0 10% 42%;}
+button{background-color: #04AA6D; color: white; padding: 14px 20px; margin: 8px 0; border: none; cursor: pointer; width: 100;}
+button:hover{opacity: 0.8;}
