--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,13 @@ nav a:hover{background-color: #009db6; border: 2px; border-color: #c1deee; borde
 /*Style rules for main content*/
 main{clear: left; background-color: #fff; padding: 2%; font-size: 1.25em;}
 
-
-
-
-
-
-
+/*Style rule for calendar section*/
+.calendarCenter{text-align: center;}
+.table-calendar{margin-left: auto; margin-right: auto; border: solid black;}
+tr:nth-child(even){background-color: lightgray;}
+td{border: solid black; text-align: center;}
+table{width: 50%;}
+th{text-align: center; height: 70px;}
 
 /*Style rules for login*/
 input[type=text], input[type=password]{width: 100%; padding: 12px 20px; margin: 8px 0; display: inline-block; border: 1px solid #ccc; box-sizing: border-box;}
