--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ nav a:hover{background-color: #009db6; border: 2px; border-color: #c1deee; borde
 
 /*Style rules for main content*/
 main{clear: left; background-color: #fff; padding: 2%; font-size: 1.25em;}
+p{font-size: 0.5em;}
+span{text-decoration: underline;}
 
 /*Style rule for calendar section*/
 .calendarCenter{text-align: center;}
