Updated the Senior Project
Last Commit to the  project finishing out some finishing touches
+ Fixed bugs related to switching pages clearing your status as logged in
+ Added Profile Page navigation to all pages
+ added logout functionality to all pages
+ Calendars Rendering was altered slightly to only include rows as necessary (still adds an extra row if the last day of the month lands on a Friday)
Profile Page now automatically fills in the profile information

- Email Variable went mostly unused it has been removed from the URL

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ nav a:hover{background-color: #009db6; border: 2px; border-color: #c1deee; borde
 main{clear: left; background-color: #fff; padding: 2%; font-size: 1.25em;}
 p{font-size: 0.5em;}
 span{text-decoration: underline;}
+select{width: 5%}
 
 .modal {
     font-family: Lucida, Arial, sans-serif;
